move outdated lang files, update translations.txt help file
git-svn-id: https://plugins.svn.wordpress.org/revision-control/trunk@192057 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/langs/translations.txt
+++ b/langs/translations.txt
@@ -2,5 +2,18 @@ Translations of this plugin are welcome & any valid translations submitted will 
 
 Please submit any translations in .mo/.po format to wordpress@dd32.id.au
 
+Also, Please, Only rely upon the .pot file when it comes to beta time, it may not be updated.
+If you update from sources, please be aware that the following translation functions are used, and you'll need to tell your translation program to understand them:
+
+Singular:
+__()
+_e()
+esc_attr_e()
+esc_attr__()
+
+Plurals:
+_n()
+
+
 Thanks :)
 Dion
