--- a/langs/translations.txt
+++ b/langs/translations.txt
@@ -14,6 +14,12 @@ esc_attr__()
 Plurals:
 _n()
 
+Dont forget to set the Plural Form in PoEdit (Or your application) as well.
+If 0 1 and >1 strings are different, use:
+ nplurals=3; plural=(n%10==1 && n%100!=11) ? 0 : ((n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20)) ? 1 : 2)
+If 0 and >1 are the same, and 1 is different, use:
+ nplurals=2; plural=n != 1
+
 
 Thanks :)
 Dion
